# parfait-gfa

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: errors.rs  gfa.rs  lib.rs  macros.rs  main.rs  optional_field.rs
src/line/: bridge.rs  containment.rs  edge.rs  fragment.rs  gap.rs  group.rs  header.rs  jump.rs  link.rs  mod.rs  ordered.rs  path.rs  record.rs  segment.rs  unordered.rs  utils.rs  walk.rs
test/: fragment.gfa  gfa_working.gfa  gfa_working_roundtrip.gfa  path.gfa  walk.gfa
